PortalPackage/ Enrollment Rx Core/objects/Configuration_Settings__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Configuration Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Name__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Configuration Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>